Merge remote-tracking branch 'origin/master'
# Conflicts:
#	src/main/java/root/report/db/DbFactory.java